--- a/projeto-corporativo/pom.xml
+++ b/projeto-corporativo/pom.xml
@@ -31,6 +31,7 @@
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>${javaee.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 
