--- a/projeto-corporativo/pom.xml
+++ b/projeto-corporativo/pom.xml
@@ -67,11 +67,13 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>${jsf.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>${jsf.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
